# pillow-avif-plugin

./: .clang-format  .gitignore  CHANGELOG.rst  MANIFEST.in  Makefile  codecov.yml  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yaml
.github/workflows/: install.sh  lint.yml  linux-install.sh  macos-install.sh  test-windows.yml  test.yml  wheels-dependencies.sh  wheels-test.ps1  wheels-test.sh  wheels.yml
depends/: aom-fixes-for-building-on-manylinux1.patch  install_libavif.sh
src/pillow_avif/: AvifImagePlugin.py  __init__.py  _avif.c
tests/: helper.py  test_file_avif.py
wheelbuild/: aom-2.0.2-manylinux1.patch  aom-3.5.0-monochrome-realtime-encode.patch  aom-fix-stack-size.patch  build.sh  config.sh  libavif-1.0.1-local-static.patch  libavif-disable-aom_usage_realtime.patch  toolchain-arm64-macos.cmake
wheelbuild/dependency_licenses/: LIBYUV.txt  RAV1E.txt
winbuild/: Findrav1e.cmake  build_prepare.py
